syntax = "proto3";

package protoconf;

import "tableau/protobuf/tableau.proto";
import "base/base.proto";

option go_package = "github.com/tableauio/loader/test/go-tableau-loader/protoconf";
option (tableau.workbook) = {
  name: "Hero.xlsx"
};

message HeroConf {
  option (tableau.worksheet) = {
    name: "HeroConf"
    ordered_map: true
    index: "Title"
    lang_options: { key: "Index" value: "go" }
    lang_options: { key: "OrderedMap" value: "cpp" }
  };
  map<string, Hero> hero_map = 1 [(tableau.field) = { key: "Name" layout: LAYOUT_VERTICAL }];
  message Hero {
    string name = 1 [(tableau.field) = { name: "Name" }];
    map<string, Attr> attr_map = 2 [(tableau.field) = { key: "Title" layout: LAYOUT_VERTICAL }];
    message Attr {
      string title = 1 [(tableau.field) = { name: "Title" }];
      string attr = 2 [(tableau.field) = { name: "Attr" }];
    }
  }
}

message HeroBaseConf {
  option (tableau.worksheet) = {
    name: "HeroBaseConf"
    ordered_map: true
    lang_options: { key: "OrderedMap" value: "go" }
  };
  map<string, base.Hero> hero_map = 1 [(tableau.field) = { key: "Name" layout: LAYOUT_VERTICAL }];
}