syntax = "proto3";

package protoconf;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "tableau/protobuf/tableau.proto";
import "common_conf.proto";

option go_package = "github.com/tableauio/loader/test/go-tableau-loader/protoconf";
option (tableau.workbook) = {
  name: "Test.xlsx"
};

message ItemConf {
  option (tableau.worksheet) = {
    name: "ItemConf"
    ordered_map: true
    index: "Type"
    index: "Param@ItemInfo"
    index: "ExtType@ItemExtInfo"
    index: "(ID,Name)@AwardItem"
    index: "(ID,Type,Param,ExtType)@SpecialItem"
  };
  map<uint32, Item> item_map = 1 [(tableau.field) = { key: "ID" layout: LAYOUT_VERTICAL }];
  message Item {
    uint32 id = 1 [(tableau.field) = { name: "ID" }];
    string name = 2 [(tableau.field) = { name: "Name" }];
    Path path = 4 [(tableau.field) = { name: "Path" }];
    google.protobuf.Timestamp expiry = 5 [(tableau.field) = { name: "Expiry" }];
    google.protobuf.Duration duration = 6 [(tableau.field) = { name: "Duration" }];
    FruitType type = 7 [(tableau.field) = { name: "Type" }];
    repeated int32 param_list = 8 [(tableau.field) = { name: "Param" }];
    repeated FruitType ext_type_list = 9 [(tableau.field) = { name: "ExtType" }];
  }
}

message Path {
  string dir = 1;
  string name = 2;
}
